--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Dsi Méditérannée</title>
 </head>
@@ -13,35 +12,35 @@
     <header>
         <img id="logo" src="img/logo.png" alt="logo Dsi_Méditerannée"/>
         <nav>
-            <a href="#" class="selected">NOS FORMATIONS</a>
-            <a href="#">NOUS RECRUTONS</a>
-            <a href="#">NOS MÉTIERS</a>
-            <a href="#">VOS AVANTAGES</a>
-            <a href="#">NOUS CONNAÎTRE</a>
-            <a href="#">ACTUALITÉS</a>
-            <a href="#">NOUS CONTACTER</a>
+            <a href="index.html" class="selected">NOS FORMATIONS</a>
+            <a href="https://ecandidature.dsi-ap.com/">NOUS RECRUTONS</a>
+            <a href="https://www.dsi-ap.com/site_dsi/#">NOS MÉTIERS</a>
+            <a href="https://www.dsi-ap.com/site_dsi/vos-avantages.html">VOS AVANTAGES</a>
+            <a href="https://www.dsi-ap.com/site_dsi/#">NOUS CONNAÎTRE</a>
+            <a href="https://www.dsi-ap.com/site_dsi/actualites.html">ACTUALITÉS</a>
+            <a href="https://www.dsi-ap.com/site_dsi/contactez-nous.html">NOUS CONTACTER</a>
         </nav>
     </header>
     <section class="section_1">
         <article class="CDA">
-            <h1>CDA SOPHIA 2023</h1>
+            <h1><span>CDA</span> SOPHIA 2023</h1>
             <p>Nôtre organisation peut aider les employeurs et les employés à naviguer sur les questions liées au handicap au travail et à trouver des solutions pour créer un environnement de travail plus inclusif.</p>
         </article>
-        <aside>
-            <img src="img/test.jpg" alt="photo de l'équipe">
-        </aside>
+        <article class="reunion" >
+            <img src="img/reu.png" id="test" alt="photo de l'équipe">
+        </article>
     </section>
     <section class="section_2">
-        <article class="découverte">
-            <a href="#">QU'EST-CE QU'UNE ENTREPRISE ADAPTÉE</a>
-            <a href="#">LE RÔLE DU RÉFÉRENT HANDICAP</a>
-            <a href="#">MÉTHODE D'INTÉGRATION</a>
-            <a href="#">PARTICULARITÉ DU RECRUTEMENT</a>
-            <a href="#">LE MAINTIEN DANS L'EMPLOI</a>
-            <a href="#">L'OETH</a>
-            <a href="#">LE HANDICAP AU TRAVAIL</a>
-            <a href="#">LE HANDICAP</a>
-            <h2>DÉCOUVREZ NOS FORMATIONS</h2>
+        <article class="decouverte">
+            <p class="box1">QU'EST-CE QU'UNE ENTREPRISE ADAPTÉE</p>
+            <p class="box2">LE RÔLE DU RÉFÉRENT HANDICAP</p>
+            <p class="box3">MÉTHODE D'INTÉGRATION</p>
+            <p class="box4">PARTICULARITÉ DU RECRUTEMENT</p>
+            <h2 class="box5">DÉCOUVREZ NOS FORMATIONS</h2>
+            <p class="box6">LE MAINTIEN DANS L'EMPLOI</p>
+            <p class="box7">L'OETH</p>
+            <p class="box8">LE HANDICAP AU TRAVAIL</p>
+            <p class="box9">LE HANDICAP</p>
         </article>
         <aside>
             <img src="img/diagramme.png" alt="statistique">
@@ -50,20 +49,29 @@
     <footer>
         <div class="contactez">
             <h2>CONTACTEZ NOUS</h2>
-            <p>80 Routes des Lucioles<br>Les Espaces de Sophia<br>Bâtiment K<br>06560 VALBONNE</p>
-            <p>Tél: 05 62 74 10 00</p>
-            <p>accueil@dsi-ap.com</p>
-            <div class="icone"><i class="fa-brands fa-facebook-f"></i></div>
-            <div class="icone"><i class="fa-brands fa-twitter"></i></div>
-            <div class="icone"><i class="fa-brands fa-linkedin-in"></i></div>
+            <address>80 Routes des Lucioles<br>Les Espaces de Sophia<br>Bâtiment K<br>06560 VALBONNE</address>
+            <a class="tel" href="tel:+33562741000">Tél: 05 62 74 10 00</a>
+            <a class="email" href="mailto:accueil@dsi-ap.com">accueil@dsi-ap.com</a>
+            <div class="social">
+                <a class="icone" href="https://www.facebook.com/distributionservicesindustrielsmed/"><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="icone" href="https://twitter.com/DsiMediterranee"><i class="fa-brands fa-twitter"></i></a>
+                <a class="icone" href="https://www.linkedin.com/company/dsi-m%C3%A9diterran%C3%A9e-entreprise-adapt%C3%A9e-et-solidaire/?originalSubdomain=fr"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
         </div>
-        <form method="get" action="">
+        <form method="get">
             <p>
-                <label for="nom_prenom">Nom Prénom</label> : <input placeholder="Bouchard Gerard" type="text" name="nomPrenom" id="nom_prenom">
-                <label for="Entreprise">Entreprise</label> : <input placeholder="Simplon" type="text" name="Entreprise" id="Entreprise">
-                <label for="Email">Email</label> : <input placeholder="simplon@gmail.com" type="text" name="Email" id="Email">
+                <label class="formulaire" for="nom_prenom">Nom Prénom</label>
+                <input placeholder="Bouchard Gerard" type="text" name="nomPrenom" id="nom_prenom">
             </p>
-            <button id="btn_envoyer">Envoyer</button>
+            <p>
+                <label class="formulaire" for="Entreprise">Entreprise</label>
+                <input placeholder="Simplon" type="text" name="Entreprise" id="Entreprise">
+            </p>
+            <p>
+                <label class="formulaire" for="Email">Email</label>
+                <input placeholder="simplon@gmail.com" type="email" name="Email" id="Email">
+            </p>
+            <input type="submit" id="btn_envoyer">
         </form>
     </footer>
 </body>
