mobile en cours

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <img id="logo" src="img/logo.png" alt="logo Dsi_Méditerannée"/>
+        <button id="btn_burger"><i class="fa-solid fa-bars"></i></button>
         <nav>
             <a href="index.html" class="selected">NOS FORMATIONS</a>
             <a href="https://ecandidature.dsi-ap.com/">NOUS RECRUTONS</a>
