correction du desktop

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Dsi Méditérannée</title>
 </head>
 <body>
@@ -24,8 +28,13 @@
     </header>
     <section class="section_1">
         <article class="CDA">
-            <h1><span>CDA</span> SOPHIA 2023</h1>
-            <p>Nôtre organisation peut aider les employeurs et les employés à naviguer sur les questions liées au handicap au travail et à trouver des solutions pour créer un environnement de travail plus inclusif.</p>
+            <h1><span>CDA</span> SOPHIA<br> 2023</h1>
+            <p>
+                Nôtre organisation peut aider les employeurs et<br>
+                les employés à naviguer sur les questions liées au<br>
+                handicap au travail et à trouver des solutions pour<br>
+                créer un environnement de travail plus inclusif.
+            </p>
         </article>
         <article class="reunion" >
             <img src="img/reu.png" id="test" alt="photo de l'équipe">
@@ -33,14 +42,14 @@
     </section>
     <section class="section_2">
         <article class="decouverte">
-            <p class="box1">QU'EST-CE QU'UNE ENTREPRISE ADAPTÉE</p>
-            <p class="box2">LE RÔLE DU RÉFÉRENT HANDICAP</p>
-            <p class="box3">MÉTHODE D'INTÉGRATION</p>
-            <p class="box4">PARTICULARITÉ DU RECRUTEMENT</p>
+            <p class="box1">QU'EST-CE<br> QU'UNE<br> ENTREPRISE<br> ADAPTÉE</p>
+            <p class="box2">LE RÔLE DU<br> RÉFÉRENT<br> HANDICAP</p>
+            <p class="box3">MÉTHODE<br> D'INTÉGRATION</p>
+            <p class="box4">PARTICULARITÉ<br> DU<br> RECRUTEMENT</p>
             <h2 class="box5">DÉCOUVREZ NOS FORMATIONS</h2>
-            <p class="box6">LE MAINTIEN DANS L'EMPLOI</p>
+            <p class="box6">LE MAINTIEN<br> DANS<br> L'EMPLOI</p>
             <p class="box7">L'OETH</p>
-            <p class="box8">LE HANDICAP AU TRAVAIL</p>
+            <p class="box8">LE HANDICAP<br> AU TRAVAIL</p>
             <p class="box9">LE HANDICAP</p>
         </article>
         <aside>
@@ -50,7 +59,7 @@
     <footer>
         <div class="contactez">
             <h2>CONTACTEZ NOUS</h2>
-            <address>80 Routes des Lucioles<br>Les Espaces de Sophia<br>Bâtiment K<br>06560 VALBONNE</address>
+            <address class="adresse">80 Routes des Lucioles<br>Les Espaces de Sophia<br>Bâtiment K<br>06560 VALBONNE</address>
             <a class="tel" href="tel:+33562741000">Tél: 05 62 74 10 00</a>
             <a class="email" href="mailto:accueil@dsi-ap.com">accueil@dsi-ap.com</a>
             <div class="social">
@@ -59,6 +68,7 @@
                 <a class="icone" href="https://www.linkedin.com/company/dsi-m%C3%A9diterran%C3%A9e-entreprise-adapt%C3%A9e-et-solidaire/?originalSubdomain=fr"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
+        <hr>
         <form method="get">
             <p>
                 <label class="formulaire" for="nom_prenom">Nom Prénom</label>
@@ -72,7 +82,7 @@
                 <label class="formulaire" for="Email">Email</label>
                 <input placeholder="simplon@gmail.com" type="email" name="Email" id="Email">
             </p>
-            <input type="submit" id="btn_envoyer">
+            <input type="submit" id="btn_envoyer" value="Envoyer">
         </form>
     </footer>
 </body>
