--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <article class="CDA">
             <h1><span>CDA</span> SOPHIA<br> 2023</h1>
             <p>
-                Nôtre organisation peut aider les employeurs et<br>
-                les employés à naviguer sur les questions liées au<br>
-                handicap au travail et à trouver des solutions pour<br>
-                créer un environnement de travail plus inclusif.
+                Nôtre organisation peut aider<br class="tel"> les employeurs et<br class="pc">
+                les employés à<br class="tel"> naviguer sur les questions liées<br class="tel"> au<br class="pc">
+                handicap au travail et à<br class="tel"> trouver des solutions pour<br class="pc">
+                créer<br class="tel"> un environnement de travail plus<br class="tel"> inclusif.
             </p>
         </article>
         <article class="reunion" >
@@ -53,7 +53,8 @@
             <p class="box9">LE HANDICAP</p>
         </article>
         <aside>
-            <img src="img/diagramme.png" alt="statistique">
+            <img src="img/diagramme.png" id="diaPc" class="diagramme" alt="statistique">
+            <img src="img/diagrammeMobile.png" id="diaMobile" class="diagramme" alt="statistique">
         </aside>
     </section>
     <footer>
@@ -62,7 +63,7 @@
             <address class="adresse">80 Routes des Lucioles<br>Les Espaces de Sophia<br>Bâtiment K<br>06560 VALBONNE</address>
             <a class="tel" href="tel:+33562741000">Tél: 05 62 74 10 00</a>
             <a class="email" href="mailto:accueil@dsi-ap.com">accueil@dsi-ap.com</a>
-            <div class="social">
+            <div class="social" id="socPc">
                 <a class="icone" href="https://www.facebook.com/distributionservicesindustrielsmed/"><i class="fa-brands fa-facebook-f"></i></a>
                 <a class="icone" href="https://twitter.com/DsiMediterranee"><i class="fa-brands fa-twitter"></i></a>
                 <a class="icone" href="https://www.linkedin.com/company/dsi-m%C3%A9diterran%C3%A9e-entreprise-adapt%C3%A9e-et-solidaire/?originalSubdomain=fr"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -84,6 +85,11 @@
             </p>
             <input type="submit" id="btn_envoyer" value="Envoyer">
         </form>
+        <div class="social" id="socTel">
+            <a class="icone" href="https://www.facebook.com/distributionservicesindustrielsmed/"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="icone" href="https://twitter.com/DsiMediterranee"><i class="fa-brands fa-twitter"></i></a>
+            <a class="icone" href="https://www.linkedin.com/company/dsi-m%C3%A9diterran%C3%A9e-entreprise-adapt%C3%A9e-et-solidaire/?originalSubdomain=fr"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
     </footer>
 </body>
 </html>
